--- a/Bin/Langs/Russian.lng
+++ b/Bin/Langs/Russian.lng
@@ -60,6 +60,7 @@ SRF=Файл отчёта
 06=Настройки
 07=Помощь
 08=Показ
+09=Форма сигнала
 
 [Main menu/File]
 01=Новые субтитры
@@ -226,6 +227,30 @@ SRF=Файл отчёта
 01=Отображать
 02=Оригинал
 03=Перевод
+
+[Main menu/Waveform]
+01=Открыть...
+02=Закрыть
+03=Предварительный показ
+04=Вставить субтитр
+05=Удалить субтитр
+06=Вставить смену сцен
+07=Удалить смену сцен
+08=Масштаб
+09=Проигрывание
+
+[Main menu/Waveform/Zoom]
+01=Увеличить
+02=Уменьшить
+03=Масштаб по выделению
+04=Масштаб по содержимому
+05=Вертикальный масштаб
+
+[Main menu/Waveform/Playback]
+01=Пуск/Пауза
+02=Стоп
+03=Предыдущий субтитр
+04=Следующий субтитр
 
 [Main menu/Settings]
 01=Настройки вывода...
@@ -509,6 +534,14 @@ SRF=Файл отчёта
 146=Проигрывать видео при загрузке
 147=Цвет графического отображения субтитров
 148=Подсвечивать тэги в полях "Текст" и "Перевод":
+;----------------;
+;    Waveform    ;
+;----------------;
+149=Форма сигнала
+150=Запретить пересечение субтитров 
+151=Безопасный отступ:
+152=Показывать текст субтитров
+153=Показывать смену сцен
 
 [Output settings]
 01=Настройки вывода
