--- a/Bin/changelog.txt
+++ b/Bin/changelog.txt
@@ -1,7 +1,7 @@
 SUBTITLE WORKSHOP VERSION HISTORY
 
 ==========================================================================================================
-Changes in version 6.0c (build 131347) since version 6.0b (build 131121)
+Changes in version 7.0 (build 131347) since version 6.0b (build 131121)
 ==========================================================================================================
 
 * Audio Preview Panel added - (show/hide from "Waveform: Waveform preview mode").
