--- a/Bin/Langs/semi-translated/Portuguese Brazilian.lng
+++ b/Bin/Langs/semi-translated/Portuguese Brazilian.lng
@@ -11,10 +11,10 @@ Font Charset=0
 AllFiles=Todos os Arquivos Suportados
 Help=Ajuda
 FPS=FPS
-PlainText=Texto Plano
+PlainText=Texto Puro
 STP=Projeto de Tradução de Legenda
 SRF=Arquivo de Relatório de Legenda
-AllTheFiles=All files
+AllTheFiles=Todos os Arquivos
 
 [Standard buttons]
 01=&Ok
@@ -73,7 +73,7 @@ AllTheFiles=All files
 12=Salvar como...
 13=Fechar
 14=Sair
-15=Save marking
+15=Salvar marcação
 
 [Main menu/Edit]
 01=Desfazer
@@ -86,7 +86,7 @@ AllTheFiles=All files
 08=Colar
 09=Selecionar tudo
 10=Inverter seleção
-11=Insert symbol...
+11=Inserir símbolo...
 
 [Main menu/Edit/Timings]
 01=Sincronia
@@ -101,10 +101,10 @@ AllTheFiles=All files
 10=Ler tempos de Arquivo
 11=Mudar %s milisegundos
 12=Extend length to previous
-13=Set pauses...
-14=Shift to next
-15=Shift to previous
-16=Round time values...
+13=Definir pausas...
+14=Ir para o próximo
+15=Ir para o anterior
+16=Arredondar valores de tempo...
 
 [Main menu/Edit/Texts]
 01=Textos
@@ -135,9 +135,9 @@ AllTheFiles=All files
 14=Marcar legendas selecionadas
 15=Desmarcar legendas selecionadas
 16=Combinar legendas automaticamente...
-17=Delete dots at the beginning
-18=Jump to next marked
-19=Jump to previous marked
+17=Excluir pontos no início
+18=Ir para a marcação seguinte
+19=Ir para a marcação anterior
 
 [Main menu/Edit/Translation]
 01=Tradução
@@ -169,8 +169,8 @@ AllTheFiles=All files
 16=Pré-visualização externa
 17=Extrator de idioma SAMI
 18=Scripts Pascal
-19=Jump to previous error
-20=Show CpS boxes
+19=Ir para o erro anterior
+20=Mostrar caixas CpS
 
 [Main menu/Movie]
 01=Abrir...
@@ -233,10 +233,10 @@ AllTheFiles=All files
 02=Negrito
 03=Sublinhado
 04=Definir Cor
-05=Remover color tags
-06=Remove all tags
-07=Delete
-08=Style
+05=Remover tags da cor
+06=Remover todas as tags
+07=Excluir
+08=Estilo
 
 [Video preview hints]
 01=Play/Pause (%s)
@@ -451,8 +451,8 @@ AllTheFiles=All files
 18=Drop frame
 19=Cor 0 (fundo):
 20=Cor 1 (Fonte):
-21=Cor 2 (outline):
-22=Cor 3 (antialiasing):
+21=Cor 2 (esboço):
+22=Cor 3 (suavização):
 23=Palette color n°:
 24=Contraste
 25=Título:
@@ -744,25 +744,25 @@ AllTheFiles=All files
 68=W
 69=F
 70=CI
-71=Select
-72=+ Select
-73=- Select
-74=Select subtitles
-75=Add to selected subtitles
-76=Remove from selected subtitles
-77=All
-78=None
-79=Inverse
-80=Select all
-81=Select none
-82=Invert selection
+71=Selecionar
+72=+ Selecionar
+73=- Selecionar
+74=Selecionar legendas
+75=Adicionar às legendas selecionadas
+76=Remover das legendas selecionadas
+77=Todas
+78=Nenhuma
+79=Inverter
+80=Selecionar todas
+81=Selecionar nenhuma
+82=Inverter seleção
 83=Error types sets
-84=Save error types set
-85=Delete error types set
-86=Error types
-87=Custom info
-88=Show/hide errors
-89=Show/hide warnings
+84=Salvar definições de tipos de erros
+85=Excluir definições de tipos de erros
+86=Tipos de erros
+87=Informações customizdas
+88=Mostrar/esconder erros
+89=Mostrar/esconder avisos
 90=Show/hide fixed
 91=Show/hide custom info
 92=Show/hide Error types panel
@@ -917,8 +917,8 @@ AllTheFiles=All files
 25=Linha mais curta:
 26=Pausa mais longa:
 27=Pausa mais curta:
-28=In subtitle %d, %d,%.3d seconds
-29=In subtitle %d, %d milliseconds
+28=Na legenda %d, %d,%.3d segundos
+29=Na legenda %d, %d milisegundos
 30=Most CpS:
 31=Least CpS:
 32=In subtitle %d, %d cps
@@ -980,7 +980,7 @@ AllTheFiles=All files
 18=Selecione uma parte da legenda na lista .
 19=Se você selecionar um fragmento de filme para uma parte da legenda, você precisa selecionar um fragmento de filme para todas as partes da legenda (menos a última parte, é claro).
 20=Você precisa de dois ou mais pontos.
-21=Incorrect regular expression in Custom info %s
+21=Expressão regular incorreta em informações customizadas %s
 22=Custom Info %d was disabled.|Fix the regular expression to enable it.
 23=Subtitle duration too short!
 24=Error: can not execute script.
